added LifeSim.Particles demo

--- a/D3DLab.Sandbox.App/D3DLab.Sandbox.App.csproj
+++ b/D3DLab.Sandbox.App/D3DLab.Sandbox.App.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFramework>net7.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
@@ -22,6 +22,9 @@
 
   <ItemGroup>
     <None Update="plugins\LifeSim.Particles.Plugin.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="plugins\LifeSim.Particles.Plugin.pdb">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
