--- a/sandbox/LifeSim.Particles.Plugin/LifeSim.Particles.Plugin.csproj
+++ b/sandbox/LifeSim.Particles.Plugin/LifeSim.Particles.Plugin.csproj
@@ -1,31 +1,23 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Library</OutputType>
     <TargetFramework>net7.0-windows</TargetFramework>
+    <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <OutputPath></OutputPath>
+    <BaseOutputPath></BaseOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\ecs\D3DLab.ECS\D3DLab.ECS.csproj" />
-    <ProjectReference Include="..\..\ecs\D3DLab.FileFormats\D3DLab.FileFormats.csproj" />
     <ProjectReference Include="..\..\ecs\D3DLab.Plugin\D3DLab.Plugin.csproj" />
     <ProjectReference Include="..\..\ecs\D3DLab.SDX.Engine\D3DLab.SDX.Engine.csproj" />
     <ProjectReference Include="..\..\ecs\D3DLab.Toolkit\D3DLab.Toolkit.csproj" />
     <ProjectReference Include="..\..\WPFLab\WPFLab\WPFLab.csproj" />
   </ItemGroup>
 
-  <ItemGroup>
-    <Page Update="MainWindow.xaml">
-      <SubType>Designer</SubType>
-    </Page>
-  </ItemGroup>
-
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="xcopy /d /y &quot;$(TargetPath)&quot; &quot;$(SolutionDir)D3DLab.Viewer\plugins\&quot;&#xD;&#xA;xcopy /d /y &quot;$(TargetDir)$(TargetName).pdb&quot; &quot;$(SolutionDir)D3DLab.Viewer\plugins\&quot;" />
+    <Exec Command="xcopy /d /y &quot;$(TargetPath)&quot; &quot;$(SolutionDir)D3DLab.Sandbox.App\plugins\&quot;&#xD;&#xA;xcopy /d /y &quot;$(TargetDir)$(TargetName).pdb&quot; &quot;$(SolutionDir)D3DLab.Sandbox.App\plugins\&quot;" />
   </Target>
 
 </Project>
